infra/api/template/load_balancer.tf
data "aws_lb" "network_load_balancer" {
  name = "${var.environment_name}-nlb"
}

# Forward HTTP traffic to the application.
# Since we're directing traffic from a private API gateway, we don't need to use HTTPS.
resource "aws_lb_listener" "listener" {
  load_balancer_arn = data.aws_lb.network_load_balancer.id
  port              = 80
  protocol          = "TCP"

  default_action {
    target_group_arn = aws_lb_target_group.app.id
    type             = "forward"
  }
}

# Define the application target to route HTTP traffic from API Gateway to the API.
resource "aws_lb_target_group" "app" {
  name                 = "${local.app_name}-${var.environment_name}"
  port                 = 80
  protocol             = "TCP"
  vpc_id               = var.vpc_id
  target_type          = "ip"
  deregistration_delay = 20

  health_check {
    protocol            = "HTTP"
    path                = "/v1/status"
    healthy_threshold   = var.service_app_count
    unhealthy_threshold = var.service_app_count
  }

  # stickiness is not supported for NLBs, but must be
  # provided due to a terraform-provider-aws bug.
  stickiness {
    enabled = false
    type    = "lb_cookie"
  }
}
